--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -274,6 +274,17 @@
 				document.write(chaine);
 			}	
 		}		
+		function fFormatDate(date){ // au format 2020-07-04
+			var dateFormat = "";
+			
+			var annee = date.substring(0, 4);
+			var mois = date.substring(5, 7);
+			var jour = date.substring(8, 10);
+			
+			dateFormat = jour+"/"+mois+"/"+annee;
+			
+			document.write(dateFormat); // au format 04/07/2020
+		}				
 	</script>	
 </head>
 
@@ -316,7 +327,7 @@
 									<strong>Email </strong>: {{#cl}}{{DF_Commande_DF_Contact_id__defiContactEmail}}{{/cl}}<br/>	
 								</div>
 								<br/>
-								<strong>N° BL associé(s)<strong> : {{#bl}} {{defiLivraisonNumBL}}, {{/bl}}<br/>
+								<strong>N° BL associé(s)<strong> : {{#bl}} <script>fval("{{defiLivraisonNumBL}}");</script>, {{/bl}}<br/>
 								<strong>N° OTP : {{#cl}}{{defiCommandeNumero}}{{/cl}}
 								<br/>
                             </td>                            
@@ -324,7 +335,14 @@
 						<tr>
 							<td colspan="2" style="vertical-align:bottom;text-align:center">
 								<h1>{{#cl}}{{DF_Commande_DF_Affaire_id__defiAfrLibelleChantier}} - {{DF_Commande_DF_Affaire_id__defiAfrLieuAffaire}}{{/cl}}</h1>
-								<h2>ORDRE DE FACTURATION du <script>var ladate = new Date();document.write(ladate.getDate()+"/"+(ladate.getMonth()+1)+"/"+ladate.getFullYear());</script></h2>
+								<h2>ORDRE DE FACTURATION du 
+									<script>
+										var now = new Date();
+										var jour = ('0'+now.getDate()).slice(-2);
+										var mois= ('0'+(now.getMonth()+1)).slice(-2);
+										document.write(jour+"/"+mois+"/"+now.getFullYear());
+									</script>
+								</h2>
 							</td>
 						</tr>
                     </table>
@@ -350,7 +368,7 @@
 			<tbody>
 				{{#rows_l}}
 				<tr>
-					<td class="ref">{{DF_Quantite_DF_Livraison_id__defiLivraisonNumBL}}</td> <!-- DF_Quantite_DF_Livraison_id__defiLivraisonNumBL -->
+					<td class="ref"><script>fval("{{DF_Quantite_DF_Livraison_id__defiLivraisonNumBL}}");</script></td> 
 					<td class="ref">{{defiQuantiteRefProduit}}</td>
 					<td class="designation">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandeDesignation}}</td>
 					<td class="unite">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandeUnite}}</td>
