--- a/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
+++ b/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
@@ -264,6 +264,17 @@
 				document.write(chaine);
 			}	
 		}		
+		function fFormatDate(date){ // au format 2020-07-04
+			var dateFormat = "";
+			
+			var annee = date.substring(0, 4);
+			var mois = date.substring(5, 7);
+			var jour = date.substring(8, 10);
+			
+			dateFormat = jour+"/"+mois+"/"+annee;
+			
+			document.write(dateFormat); // au format 04/07/2020
+		}		
 	</script>	
 </head>
 <body>
@@ -306,7 +317,7 @@
 								</div>
 										<br/>
 										
-										<strong>Date d'émission </strong>: {{defiCommandeDate}}<br/>
+										<strong>Date d'émission </strong>: <script>fFormatDate("{{defiCommandeDate}}");</script><br/>
 										<strong>Référence Commande </strong>: {{defiCommandeNumero}}
 							
                             </td>                            
@@ -390,7 +401,7 @@
 		<p>
 			<br/>
 			<strong>
-				DATE DE MISE A DISPOSITION DU PREMIER SEMI (à vous confirmer) : {{defiCommandeDatePremierCamion}}
+				DATE DE MISE A DISPOSITION DU PREMIER SEMI (à vous confirmer) : <script>fFormatDate("{{defiCommandeDatePremierCamion}}");</script>
 				<br/>
 				<i>Le délai de fabrication court à partir de la reception des documents techniques et le présent ARC validés par vos soins
 				(fiches pierres, quantité, finition et détails éventuels par référence d'articles)</i>
