--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -284,6 +284,27 @@
 				document.write(chaine);
 			}	
 		}
+		function fTrouvePrixUnitaire(PrixUnitaireCalcule,PrixUnitaireImpose) {
+			
+			if(PrixUnitaireImpose+""=="null"){
+				return(PrixUnitaireCalcule);
+			}
+			else {
+				return(PrixUnitaireImpose);
+			}
+		
+		}
+		function fFormatDate(date){ // au format 2020-07-04
+			var dateFormat = "";
+			
+			var annee = date.substring(0, 4);
+			var mois = date.substring(5, 7);
+			var jour = date.substring(8, 10);
+			
+			dateFormat = jour+"/"+mois+"/"+annee;
+			
+			document.write(dateFormat); // au format 04/07/2020
+		}
 	</script>
 </head>
 <body>
@@ -323,7 +344,7 @@
 									<strong>Tel </strong>: {{DF_Devis_DF_Contact_id__defiContactPortable}}<br/>
 								</div>
 								<br/>										
-								<strong>Date d'émission </strong>: {{defiDevisDateEmission}}<br/>
+								<strong>Date d'émission </strong>: <script>fFormatDate("{{defiDevisDateEmission}}");</script><br/>
 								<!--<strong>Ref Projet </strong>: {{defiDevisTitre}}-->
                             </td>                            
                         </tr>
@@ -361,7 +382,7 @@
 					<td class="designation">{{defiLigneDevisDesignation}}</td>
 					<td class="unite"><script>fval("{{defiLigneDevisUnite}}");</script></td>
 					<td class="quantite">{{defiLigneDevisQuantite}}</td>
-					<td class="prixu"><script>fPrix({{defiLigneDevisPrixVenteImpose}}/{{defiLigneDevisQuantite}});</script></td>
+					<td class="prixu"><script>fPrix(fTrouvePrixUnitaire({{defiLigneDevisPrixVenteCalcule}},{{defiLigneDevisPrixUnitaireImpose}}));</script></td> <!-- fPrix({{defiLigneDevisPrixVenteImpose}}/{{defiLigneDevisQuantite}}); -->
 					<td class="prixt"><script>fPrix({{defiLigneDevisPrixVenteImpose}});</script></td>
 				</tr>
 				{{/rows_l}}
