--- a/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
@@ -54,6 +54,11 @@
 	.tg  {
 		border-collapse:collapse;
 		border-spacing:0px !important;
+		page-break-inside:auto;   
+	}
+	.tg tr {
+		page-break-inside:avoid;
+		page-break-after:auto      	
 	}
 	.tg td {
 		padding:10px 7px !important;
@@ -131,6 +136,7 @@
 	
 	tfoot {
 		xbackground-color:#ccc;
+		display: table-row-group;
 	}	
 	
 	tfoot td.vide {
@@ -225,6 +231,11 @@
 	
 	div.coordclient {		
 		font-size:13px;
+	}	
+	
+	.cleanbreak {
+		page-break-inside:avoid;
+		page-break-after:auto 	
 	}	
 	
 	</style>	
@@ -353,7 +364,7 @@
 		</table>
 		
 	{{#rows}}
-	<div>
+	<div class="cleanbreak">
 		<p>
 			<br/>
 				<strong>Poids Total : {{df_livraison_quantite_chargee}} Tonnes</strong>
@@ -364,7 +375,7 @@
 	</div>
 	{{/rows}}
 	
-	<table class="signature">
+	<table class="signature cleanbreak">
 		<tr>
 			<td>
 				<span class="signature_span">Date et signature</span>
@@ -372,7 +383,7 @@
 		</tr>	
 	</table>
 	
-	<p class="cordialement"><strong>Pour toute réclamation, merci de bien vouloir noter les réserves sur le Bon de Livraison et la CMR</strong><br/>
+	<p class="cordialement cleanbreak"><strong>Pour toute réclamation, merci de bien vouloir noter les réserves sur le Bon de Livraison et la CMR</strong><br/>
 		Nous restons à votre disposition pour tout renseignement,<br/><br/>
 		L'équipe Minéral Conseil
 	</p>				
