[18.4] Unité  Ligne Devis VL / Impression

--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -400,7 +400,7 @@
 					<td class="ref">{{defiLigneDevisNPrix}}</td>
 					<td class="type"><script>fval("{{defiLigneDevisTypePierre}}");</script></td>
 					<td class="designation">{{defiLigneDevisDesignation}}</td>
-					<td class="unite"><script>funite("{{defiLigneDevisUnite}}","{{defiLigneDevisCatPrix}}");</script></td>
+					<td class="unite"><script>funite("{{defiLigneDevisU}}","{{defiLigneDevisCatPrix}}");</script></td>
 					<td class="quantite">{{defiLigneDevisQuantite}}</td>
 					<td class="prixu"><script>fPrix(fTrouvePrixUnitaire({{defiLigneDevisPrixVenteCalcule}},{{defiLigneDevisPrixUnitaireImpose}}));</script></td> <!-- fPrix({{defiLigneDevisPrixVenteImpose}}/{{defiLigneDevisQuantite}}); -->
 					<td class="prixt"><script>fPrix({{defiLigneDevisPrixVenteImpose}});</script></td>
