--- a/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
@@ -305,7 +305,10 @@
 								{{#rows_u}}
 								<strong>Tel : </strong>{{usr_cell_num}}<br/>
 								<strong>Email : </strong>{{usr_email}}<br/>
-								{{/rows_u}}														
+								{{/rows_u}}											
+
+								<br/><br/>
+								<strong>Adresse de livraison : </strong>{{#rows_commande}}{{defiCommandeAdresseLivraison}}{{/rows_commande}}
 							</td>
                             <td style="text-align:right">
 								<div class="coordclient">
