--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -339,7 +339,7 @@
 								</div>
 								<br/>
 								<strong>N° BL associé(s)<strong> : {{#bl}} <script>fval("{{defiLivraisonNumBL}}");</script>, {{/bl}}<br/>
-								<strong>N° OTP : {{#cl}}{{defiCommandeNumero}}{{/cl}}
+								<strong>N° OTP : {{#cl}}{{DF_Commande_DF_Affaire_id__defiAfrNumero}}{{/cl}}
 								<br/>
                             </td>                            
                         </tr>
